fixed layout so that things would not overlap

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1358,9 +1358,6 @@ td.cell-from .practice, td.cell-to .practice {
 		text-align: right;
 	}
 
-    .navbar .powered-by {
-        margin-top: 60px;
-    }
     .navbar .powered-by img {
         height: 55px;
     }
